--- a/support.html
+++ b/support.html
@@ -59,6 +59,6 @@
             <p>Skicka e-post till: <a href="mailto:bananen@banan.se">bananen@banan.se</a></p>
         </div>
     </div>
-
+<li><a href="#" onclick="loadPage('/Test-sida1/bakgrund.html')">Bakgrund</a></li>
 </body>
 </html>
