--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="box banan">
-        <h2>Recention</h2>
+        <h2>Recension</h2>
         <div class="image-wrapper">
             <img src="/bilder/star.jpg" alt="" class="blurred-image">
         </div>
