--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#start-aventyr">Börja äventyret</a>
         </div>
         <div class="image-content">
-            <img src="/public/bilderavalon/Swordstone.jpg" alt="svärd i sten"> 
+            <img src="/bilderavalon/Swordstone.jpg" alt="svärd i sten"> 
         </div>
     </div>
 
@@ -38,7 +38,7 @@
             <a class="secondary-btn" href="">Skapa konto</a>
         </div>
         <div class="image-content">
-            <img src="/public/bilderavalon/castle.jpg" alt="slott"> 
+            <img src="/bilderavalon/castle.jpg" alt="slott"> 
         </div>       
     </div>
     
@@ -55,10 +55,10 @@
             </p>
         </div>
         <div class="image-content">
-            <img src="/public/bilderavalon/desert.jpg" alt="öken"> 
+            <img src="/bilderavalon/desert.jpg" alt="öken"> 
         </div>       
     </div>
-    <script src="/public/scripts-js/scrolleffekt.js"></script>
+    <script src="/scripts-js/scrolleffekt.js"></script>
 </body>
 </html>
 
