--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles-css/general.css">
+    <link rel="stylesheet" href="styles-css/general.css">
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
             <a href="#start-aventyr">Börja äventyret</a>
         </div>
         <div class="image-content">
-            <img src="/bilderavalon/Swordstone.jpg" alt="svärd i sten"> 
+            <img src="bilderavalon/Swordstone.jpg" alt="svärd i sten"> 
         </div>
     </div>
 
@@ -38,7 +38,7 @@
             <a class="secondary-btn" href="">Skapa konto</a>
         </div>
         <div class="image-content">
-            <img src="/bilderavalon/castle.jpg" alt="slott"> 
+            <img src="bilderavalon/castle.jpg" alt="slott"> 
         </div>       
     </div>
     
@@ -55,10 +55,10 @@
             </p>
         </div>
         <div class="image-content">
-            <img src="/bilderavalon/desert.jpg" alt="öken"> 
+            <img src="bilderavalon/desert.jpg" alt="öken"> 
         </div>       
     </div>
-    <script src="/scripts-js/scrolleffekt.js"></script>
+    <script src="scripts-js/scrolleffekt.js"></script>
 </body>
 </html>
 
