--- a/spelet.html
+++ b/spelet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rollfördelningsspel</title>
-    <link rel="stylesheet" href="/public/styles-css/spelet.css">
+    <link rel="stylesheet" href="spelet.css">
 </head>
 <body>
     <div id="game-container">
@@ -125,6 +125,6 @@
         
         <p id="message"></p>
     </div>
-    <script src="/public/scripts-js/spelet.js"></script>
+    <script src="spelet.js"></script>
 </body>
 </html>
