--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 Om du redan har ett konto loggar du bara in, 
                 och du kommer direkt till spelsidan.
             </p>
-            <a href="/spelet.html">Logga in</a>
+            <a href="spelet.html">Logga in</a>
             <a class="secondary-btn" href="">Skapa konto</a>
         </div>
         <div class="image-content">
